2008-05-25  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* term/emf.trm (EMF_options): Option 'size' broke out of parsing
	loop prematurely.

2008-05-22  Thomas Sefzick  <thse@users.sourceforge.net>

	* src/bitmap.c (b_vector): If either end of a vector would fall outside
	the canvas area, don't draw it.  This prevents segfaults and memory
	access problems if the terminal coordinates overflow or go negative.
	Bug #1969415

2008-05-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/specfun.c (inverse_error_func):  The piecewise numerical 
	approximation failed to handle the case where x was exactly the join
	point for the pieces.  Include +/- 0.7 in the central piece.
	Also add one more cycle of Newton-Raphson.
	Bug #1962800

	* docs/doc2texi.el docs/gnuplot.texi:  Update

	* src/graphics.c (boundary): If it is impossible to reserve as much
	space as needed for the key, print a warning and leave the plot borders
	where they are. This prevents the plot border from being pushed entirely
	off the canvas.

2008-05-20  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm (EMF_dashtype):  Don't ignore linetype LT_AXIS.

2008-05-20  Ethan A Merritt  <merritt@u.washington.edu>
	
	* src/misc.c (parse_fillstyle):  Accept variables for fill density and
	border line type.

	* src/plot2d.c (eval_plots): Accept full keyword "fillstyle".

	* src/graphics.c (plot_boxes): Restore missing test for no fill border.

2008-05-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_option_binary df_show_binary df_show_datasizes)
	src/show.c (show_datafile) docs/gnuplot.doc:
	Clean up option handling for binary data files by using the standard
	option lookup routines. Add missing entry points to the documentation
	for binary data options. Simplify default output of "show datafile".
	"show datafile binary" will dump full list of options.

	* src/scanner.c (get_num):  Add back previous test for truncation
	of long to int on 64-bit machines.
